--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: var(--default-layout-header-width);
+    min-width: var(--default-layout-header-width);
     padding: 0 24px 0 16px;
     height: 100%;
 }
